# cpp-AuthService

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
Config/: config.json
Tests/: AuthService_unittest.cc  Tests.cpp
src/: AuthService.cpp  AuthService.h
src/Config/: Config.cpp  Config.h
src/Logger/: Logger.cpp  Logger.h
src/Network/: server.cpp
src/Network/Client/: Client.cpp  Client.h
src/Network/Server/: Server.cpp
src/Storage/: Sorage.h  Storage.cpp  Storage.h
src/Storage/SessionID/: SessionID.cpp
src/lib/: RandomString.cpp  RandomString.h
